--- a/final-paper/introduction.tex
+++ b/final-paper/introduction.tex
@@ -26,4 +26,4 @@ By running Revelio against existing GitHub projects and conducting a user survey
 \item [R5] How useful do developers find the IDE plugin while writing code?
 \end{itemize}
 
-The rest of this paper is organized as follows: we describe the implementation and usage of Revelio in Section~\ref{sec:revelio}. Next we evaluate Revelio by conducting a pull-request study and user study in Section~\ref{sec:evaluation} and discuss the results in Section~\ref{sec:discussion}. We finish the paper with related work in Section~\ref{sec:related-work}, future work in Section~\ref{sec:future-work} and a conclusion in Section~\ref{sec:conclusion}.
+The rest of this paper is organized as follows: we describe the implementation and usage of Revelio in Section~\ref{sec:revelio}. Next we evaluate Revelio by conducting a pull-request study and user study in Section~\ref{sec:evaluation} and discuss the results in the same section. We finish the paper with related work in Section~\ref{sec:related-work}, future work in Section~\ref{sec:future-work} and a conclusion in Section~\ref{sec:conclusion}.
