--- a/final-paper/paper.tex
+++ b/final-paper/paper.tex
@@ -93,9 +93,9 @@ Software libraries}
 \input{evaluation}
 
 
-\section{Discussion}
-\label{sec:discussion}
-\input{discussion}
+\section{Threats to Validity}
+\label{sec:threats}
+\input{threats}
 
 
 \section{Related Work}
