--- a/final-paper/related-work.tex
+++ b/final-paper/related-work.tex
@@ -1,8 +1,9 @@
-There has been a lot of prior work in analyzing developer response to pull-request style notifications to update dependencies in their projects and many empirical studies on awareness and perception of security vulnerabilities. There has also been some prior work that analyzes the impact of dependency management systems and software ecosystems on the ease of managing vulnerable dependencies. 
+There has been a lot of prior work in analyzing developer response to pull request style notifications to update dependencies in their projects and many empirical studies on awareness and perception of security vulnerabilities. There has also been some prior work that analyzes the impact of dependency management systems and software ecosystems on the ease of managing vulnerable dependencies. 
 
 \subsection{Awareness of Outdated Dependencies and Security Vulnerabilities}
 
-Requires.io\footnote{\url{https://requires.io/}} sends notifications if a Python dependency is expired. It monitors git repositories, however, a free plan is only available for using public repositories. All security advisories are confirmed manually and it does not provide the possibility to update outdated dependencies.
+Currently, there exist a few tools that automatically check code for outdated or vulnerable dependencies.
+Requires.io\footnote{\url{https://requires.io/}} sends notifications if a Python dependency is expired. It monitors GitHub repositories, however, a free plan is only available for using public repositories. All security advisories are confirmed manually and it does not provide the possibility to update outdated dependencies.
 
 Greenkeeper.io\footnote{\url{https://greenkeeper.io/}} updates \texttt{npm} dependencies of Github JavaScript projects in real-time. It runs tests and notifies when the code breaks. Greenkeeper.io offers several pricing plans however no free version is available.
 
