--- a/final-paper/revelio.tex
+++ b/final-paper/revelio.tex
@@ -176,7 +176,7 @@ Revelio does not consider the context in which a vulnerable function is used. So
 
 \subsubsection{Test Dependencies}
 
-Revelio can detect and automatically execute available tests in Python. However, often projects have other external dependencies that are not Python dependencies. For example, some projects required \texttt{cmake} to successfully run and execute tests. If not installed, none of the tests can be executed. We ran our pull-request study in a Docker container that had the most commonly used dependencies installed. However, most projects depended on very specific tools that were not installed, thus, most tests could not be executed.  
+Revelio can detect and automatically execute available tests in Python. However, often projects have other external dependencies that are not Python dependencies. For example, some projects required \texttt{cmake} to successfully run and execute tests. If not installed, none of the tests can be executed. We ran our pull request study in a Docker container that had the most commonly used dependencies installed. However, most projects depended on very specific tools that were not installed, thus, most tests could not be executed.  
 
 \subsubsection{IDE Integration}
 
