--- a/final-paper/threats.tex
+++ b/final-paper/threats.tex
@@ -1,9 +1,11 @@
-Most of our participants in the user study work in academia. Academics are less concerned (confirmed through the user study) with the implications of insecure code and have less experience. The results might be different for developers working in industry. None of the participants have any specialized experience dealing with security issues in software. This we believe this is the norm, and therefore should not impact the generalizability of our results. 
+\begin{enumerate}
+\item Most of our participants in the user study work in academia. Academics are less concerned (confirmed through the user study) with the implications of insecure code and have less experience. The results might be different for developers working in industry. None of the participants have any specialized experience dealing with security issues in software. This we believe this is the norm, and therefore should not impact the generalizability of our results. 
 
-None of the people we interviewed for the user study was very experienced in writing production-ready Python code. This can impact the validity of our claim regarding the utility of this tool. However, we believe that even for experienced developers, having a handy resource that verifies their code against a CVE database is useful and can help them scan for vulnerabilities that they are not abreast of, or might forget to look for. 
+\item None of the people we interviewed for the user study was very experienced in writing production-ready Python code. This can impact the validity of our claim regarding the utility of this tool. However, we believe that even for experienced developers, having a handy resource that verifies their code against a CVE database is useful and can help them scan for vulnerabilities that they are not abreast of, or might forget to look for. 
 
-There is a lot of variation among Python projects in the location and mechanism of test scripts. This can make it difficult to run the test from the tox environment. Also, some python packages needed by the projects we analyzed had dependencies that needed compiling in special ways - some packages had C bindings that needed to be compiled. We made a best-effort installation effort to get all the dependencies ready for testing the project, however, for most projects could not be executed. While this does not have a direct influence on detecting vulnerabilities, it might have had a minor impact on the pull-request study. Not all of the projects had continuous integration set up. Project maintainer might have been reluctant to merge the changes if they did not know whether the code would break. However, for the project that automatically ran tests after pushing code, all of the tests succeeded. 
+\item There is a lot of variation among Python projects in the location and mechanism of test scripts. This can make it difficult to run the test from the tox environment. Also, some python packages needed by the projects we analyzed had dependencies that needed compiling in special ways - some packages had C bindings that needed to be compiled. We made a best-effort installation effort to get all the dependencies ready for testing the project, however, for most projects could not be executed. While this does not have a direct influence on detecting vulnerabilities, it might have had a minor impact on the pull-request study. Not all of the projects had continuous integration set up. Project maintainer might have been reluctant to merge the changes if they did not know whether the code would break. However, for the project that automatically ran tests after pushing code, all of the tests succeeded. 
 
-We only selected 200 relatively popular Python projects from GitHub. To get more representative results a much larger number of projects would be necessary. However, we believe that this number already gives a good indication of whether our tool might help developers in detecting vulnerabilities.
+\item We only selected 200 relatively popular Python projects from GitHub. To get more representative results a much larger number of projects would be necessary. However, we believe that this number already gives a good indication of whether our tool might help developers in detecting vulnerabilities.
 
-Our tool marks functions as potential vulnerabilities although they might not pose a security threat in the context they are used. An example for this is \texttt{hashlib.md5} as discussed earlier. This might have resulted in many false positives. Nevertheless, we think it is still good to know for developers that they use functions that might result in vulnerabilities. This way they can make sure that they actually use these function safely.
+\item Our tool marks functions as potential vulnerabilities although they might not pose a security threat in the context they are used. An example for this is \texttt{hashlib.md5} as discussed earlier. This might have resulted in many false positives. Nevertheless, we think it is still good to know for developers that they use functions that might result in vulnerabilities. This way they can make sure that they actually use these function safely.
+\end{enumerate}
