other teeny tiny changes

--- a/final-paper/evaluation.tex
+++ b/final-paper/evaluation.tex
@@ -141,7 +141,7 @@ Most participants we interviewed, as shown in Table~\ref{tab:user-study}, either
   \centering
   \begin{tabular}{|p{0.08\textwidth}|p{0.08\textwidth}|p{0.1\textwidth}|p{0.08\textwidth}|p{0.08\textwidth}|p{0.08\textwidth}|p{0.08\textwidth}|p{0.08\textwidth}|p{0.08\textwidth}|}
     \hline
-Developer & Age & Job Title & Proficiency in Python & Domain expertise & Number of vulnerabilities identified & Is the tool useful? & Usability of the tool & Will you use it? \\
+Developer & Age & Job Title & Proficiency in Python & Domain expertise & Number of vulnerabilities identified & Utility of the tool & Usability of the tool & Will you use it? \\
 \hline
 \hline
 HG & 24 & Graduate Student & 3 & 2 & 3 & 4 & 5 & 2 \\
@@ -159,7 +159,7 @@ ND* & 28 & Member of Technical Staff, NetApp & 4 & 3 & 4 & 3 & 5 & 4 \\
 VK* & 28 & Technology Associate, Goldman Sachs & 4 & 2 & 2 & 4 & 5 & 4 \\
 \hline
   \end{tabular}
-  \caption{User demographics data. Participants marked with an asterix(*) were interviewed remotely over Skype. The ratings are on a scale of 1 to 5, where 1 is the worst and 5 is the best possible score for that question} 
+  \caption{User demographics data. Participants marked with an asterix(*) were interviewed remotely over Skype. The ratings are on a scale of 1 to 5, where 1 is the worst and 5 is the best possible score for that question.} 
   \label{tab:user-study}
 \end{table*}
 
